<resources>
    <string name="app_name">Nutria</string>
    <string name="add_ingredients_message">Please add ingredients\nin separate lines</string>
    <string name="analyze">Analyze</string>
    <string name="ingredients_hint">1 cup rice,\n10 oz chickpeas</string>
    <string name="error_title">Error</string>
    <string name="ok">Ok</string>
    <string name="error_connection">No connection found</string>
    <string name="error_general">Error</string>
    <string name="error_unauthorized">UnAuthroized Request</string>
    <string name="error_deformed_recipe">Please make sure to add ingredients properly</string>
    <string name="total">Total</string>
    <string name="calories">Calories</string>
    <string name="weight">Weight</string>
    <string name="total_summary">Total Summary</string>
    <string name="nutrition_facts">Nutrition Facts</string>
    <string name="fat">Fat</string>
    <string name="cholesterol">Cholesterol</string>
    <string name="sodium">Sodium</string>
    <string name="carbohydrate">Carbohydrate</string>
    <string name="vitamin">Vitamin</string>
    <string name="protein">Protein</string>
    <string name="calcium">Calcium</string>
    <string name="iron">Iron</string>
    <string name="potassium">Potassium</string>
    <string name="welcome_to">Welcome to</string>
</resources>