<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.view.View" />

        <variable
            name="ingredientsDetailsViewModel"
            type="com.example.nutria.ui.ingredients.IngredientsViewModel" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="@dimen/_72sdp">

                <TextView
                    android:id="@+id/tv_welcome_to"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_24sdp"
                    android:text="@string/welcome_to"
                    android:textSize="@dimen/_22ssp"
                    android:textColor="@color/grey_700"
                    android:textStyle="italic"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_app_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:text="@string/app_name"
                    android:textAllCaps="true"
                    android:textColor="@color/green"

                    android:textSize="@dimen/_28ssp"
                    android:textStyle="bold"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_welcome_to" />

                <TextView
                    android:id="@+id/tv_plz_add_ingredients"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_24sdp"
                    android:gravity="center"
                    android:paddingLeft="@dimen/_16sdp"
                    android:paddingRight="@dimen/_16sdp"
                    android:text="@string/add_ingredients_message"
                    android:textSize="@dimen/_18ssp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_app_title" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tie_ingredients"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/_300sdp"
                    android:layout_marginLeft="@dimen/_16sdp"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:lineSpacingExtra="@dimen/_8sdp"
                    android:layout_marginRight="@dimen/_16sdp"
                    android:layout_marginBottom="@dimen/_16sdp"
                    android:padding="@dimen/_16sdp"
                    android:gravity="top"
                    android:background="@drawable/shape_rect_rounded_grey_stroke"
                    android:hint="@string/ingredients_hint"
                    android:inputType="textMultiLine"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_16ssp"
                    app:layout_constraintHeight_max="@dimen/_200sdp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_plz_add_ingredients"
                    app:layout_constraintWidth_max="@dimen/_300sdp" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>

        <Button
            android:id="@+id/btn_analyze"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:background="@drawable/shape_rect_circular_secondary_color"
            android:enabled="false"
            android:paddingHorizontal="@dimen/_16sdp"
            android:layout_marginBottom="@dimen/_20sdp"
            android:text="@string/analyze" />
    </FrameLayout>
</layout>