<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="totalNutrientsViewModel"
            type="com.example.nutria.ui.totalNutrients.TotalNutrientsViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_facts_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/_30sdp"
            android:text="@string/nutrition_facts"
            android:textColor="@color/green"
            android:textSize="@dimen/_28ssp" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:layout_marginRight="@dimen/_8sdp"
            android:layout_marginBottom="@dimen/_16sdp"
            app:cardBackgroundColor="@color/grey_100"
            app:cardCornerRadius="@dimen/_8sdp"
            app:cardElevation="2dp"
            app:cardUseCompatPadding="true">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fillViewport="true">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/_8sdp"
                    android:paddingBottom="@dimen/_8sdp">

                    <TextView
                        android:id="@+id/tv_calories_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_6sdp"
                        android:paddingHorizontal="@dimen/_16sdp"
                        android:text="@string/calories"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_20ssp"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tv_calories_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingHorizontal="@dimen/_16sdp"
                        android:textColor="@color/grey_700"
                        android:textSize="@dimen/_16ssp"
                        app:layout_constraintBottom_toBottomOf="@id/tv_calories_title"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="@id/tv_calories_title"
                        tools:text="720 kcal" />


                    <TextView
                        android:id="@+id/tv_fat_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_12sdp"
                        android:paddingHorizontal="@dimen/_16sdp"
                        android:text="@string/fat"
                        android:textColor="@color/grey_800"
                        android:textSize="@dimen/_14ssp"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tv_calories_title" />

                    <TextView
                        android:id="@+id/tv_fat_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingHorizontal="@dimen/_16sdp"
                        android:textColor="@color/grey_700"
                        android:textSize="@dimen/_14ssp"
                        app:layout_constraintBottom_toBottomOf="@id/tv_fat_title"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="@id/tv_fat_title"
                        tools:text="40" />


                    <TextView
                        android:id="@+id/tv_cholesterol_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_12sdp"
                        android:paddingHorizontal="@dimen/_16sdp"
                        android:text="@string/cholesterol"
                        android:textColor="@color/grey_800"
                        android:textSize="@dimen/_14ssp"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tv_fat_title" />

                    <TextView
                        android:id="@+id/tv_cholesterol_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingHorizontal="@dimen/_16sdp"
                        android:textColor="@color/grey_700"
                        android:textSize="@dimen/_14ssp"
                        app:layout_constraintBottom_toBottomOf="@id/tv_cholesterol_title"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="@id/tv_cholesterol_title"
                        tools:text="40" />


                    <TextView
                        android:id="@+id/tv_sodium_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_12sdp"
                        android:paddingHorizontal="@dimen/_16sdp"
                        android:text="@string/sodium"
                        android:textColor="@color/grey_800"
                        android:textSize="@dimen/_14ssp"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tv_cholesterol_title" />

                    <TextView
                        android:id="@+id/tv_sodium_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingHorizontal="@dimen/_16sdp"
                        android:textColor="@color/grey_700"
                        android:textSize="@dimen/_14ssp"
                        app:layout_constraintBottom_toBottomOf="@id/tv_sodium_title"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="@id/tv_sodium_title"
                        tools:text="40" />


                    <TextView
                        android:id="@+id/tv_carbohydrate_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_12sdp"
                        android:paddingHorizontal="@dimen/_16sdp"
                        android:text="@string/carbohydrate"
                        android:textColor="@color/grey_800"
                        android:textSize="@dimen/_14ssp"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tv_sodium_title" />

                    <TextView
                        android:id="@+id/tv_carbohydrate_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingHorizontal="@dimen/_16sdp"
                        android:textColor="@color/grey_700"
                        android:textSize="@dimen/_14ssp"
                        app:layout_constraintBottom_toBottomOf="@id/tv_carbohydrate_title"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="@id/tv_carbohydrate_title"
                        tools:text="40" />


                    <TextView
                        android:id="@+id/tv_protein_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_12sdp"
                        android:paddingHorizontal="@dimen/_16sdp"
                        android:text="@string/protein"
                        android:textColor="@color/grey_800"
                        android:textSize="@dimen/_14ssp"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tv_carbohydrate_title" />

                    <TextView
                        android:id="@+id/tv_protein_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingHorizontal="@dimen/_16sdp"
                        android:textColor="@color/grey_700"
                        android:textSize="@dimen/_14ssp"
                        app:layout_constraintBottom_toBottomOf="@id/tv_protein_title"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="@id/tv_protein_title"
                        tools:text="40" />


                    <TextView
                        android:id="@+id/tv_vitamin_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_12sdp"
                        android:paddingHorizontal="@dimen/_16sdp"
                        android:text="@string/vitamin"
                        android:textColor="@color/grey_800"
                        android:textSize="@dimen/_14ssp"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tv_protein_title" />

                    <TextView
                        android:id="@+id/tv_vitamin_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingHorizontal="@dimen/_16sdp"
                        android:textColor="@color/grey_700"
                        android:textSize="@dimen/_14ssp"
                        app:layout_constraintBottom_toBottomOf="@id/tv_vitamin_title"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="@id/tv_vitamin_title"
                        tools:text="40" />


                    <TextView
                        android:id="@+id/tv_calcium_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_12sdp"
                        android:paddingHorizontal="@dimen/_16sdp"
                        android:text="@string/calcium"
                        android:textColor="@color/grey_800"
                        android:textSize="@dimen/_14ssp"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tv_vitamin_title" />

                    <TextView
                        android:id="@+id/tv_calcium_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingHorizontal="@dimen/_16sdp"
                        android:textColor="@color/grey_700"
                        android:textSize="@dimen/_14ssp"
                        app:layout_constraintBottom_toBottomOf="@id/tv_calcium_title"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="@id/tv_calcium_title"
                        tools:text="40" />


                    <TextView
                        android:id="@+id/tv_iron_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_12sdp"
                        android:paddingHorizontal="@dimen/_16sdp"
                        android:text="@string/iron"
                        android:textColor="@color/grey_800"
                        android:textSize="@dimen/_14ssp"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tv_calcium_title" />

                    <TextView
                        android:id="@+id/tv_iron_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingHorizontal="@dimen/_16sdp"
                        android:textColor="@color/grey_700"
                        android:textSize="@dimen/_14ssp"
                        app:layout_constraintBottom_toBottomOf="@id/tv_iron_title"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="@id/tv_iron_title"
                        tools:text="40" />


                    <TextView
                        android:id="@+id/tv_potassium_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_12sdp"
                        android:paddingHorizontal="@dimen/_16sdp"
                        android:text="@string/potassium"
                        android:textColor="@color/grey_800"
                        android:textSize="@dimen/_14ssp"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tv_iron_title" />

                    <TextView
                        android:id="@+id/tv_potassium_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingHorizontal="@dimen/_16sdp"
                        android:textColor="@color/grey_700"
                        android:textSize="@dimen/_14ssp"
                        app:layout_constraintBottom_toBottomOf="@id/tv_potassium_title"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="@id/tv_potassium_title"
                        tools:text="40" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </ScrollView>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</layout>